--- a/.github/workflows/publish-ghrc.yml
+++ b/.github/workflows/publish-ghrc.yml
@@ -17,9 +17,11 @@ jobs:
 
       - name: Build the package
         run: mvn --batch-mode -DskipTests package
+        working-directory: primes-service/primes-service
 
       - name: Run the unit tests
         run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
+        working-directory: primes-service/primes-service
 
       - name: Report
         uses: dorny/test-reporter@v1
