fix in github action workflow yml file

--- a/.github/workflows/publish-ghrc.yml
+++ b/.github/workflows/publish-ghrc.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Build and push the image
         run: |
           docker login --username lukeeal --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-          docker build -t ghcr.io/lukeaal/primes-service/tree/main/primes-service:latest --file Dockerfile .  
-          docker push ghcr.io/lukeaal/primes-service/tree/main/primes-service:latest 
+          docker build -t ghcr.io/lukeaal/primes-service:latest --file Dockerfile .  
+          docker push ghcr.io/lukeaal/primes-service
